# vintix

./: EVAL.md  README.md  pyproject.toml
docker/bidexhands_validation/: Dockerfile  README.md  bidexhands.patch  isaacgym_torch_utils.patch
docker/industrial_benchmark_validation/: Dockerfile  README.md  industrial_benchmark_ibgym.patch  industrial_benchmark_ids.patch
docker/mujoco_metaworld_validation/: Dockerfile  README.md
docker/train/: Dockerfile  README.md
envs/wrappers/: bidexhands.py  industrial_benchmark.py
vintix/data/: torch_dataloaders.py
vintix/nn/: model.py
vintix/training/utils/: train_utils.py
