[project]
name = "Vintix"
description = "Vintix: Action Model via In-Context Reinforcement Learning"
requires-python =">=3.8"
dependencies = [
    "h5py",
    "numpy>=1.24.4",
    "pyrallis",
    "torch>=2.1.0",
    "wandb",
    "huggingface_hub",
    "scikit-learn>=1.3.0",
    "flash-attn>=2.6.3"
]
authors = [
    {name = "polubarov", email = "polubarov@airi.net"},
    {name = "lyubaykin", email = "lyubaykin@airi.net"},
    {name = "derevyagin" ,email = "derevyagin@airi.net"}
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["vintix"]